hphp/hack/test/sound_dynamic/typing/sdt_private_method.bad.php.exp
WARN: File "sdt_private_method.bad.php", line 16, characters 9-11:
Method invoked on a value of type `dynamic` (Warn[12038])
  File "sdt_private_method.bad.php", line 15, characters 27-33:
  This expression has type `dynamic`
ERROR: File "sdt_private_method.bad.php", line 13, characters 12-15:
Method  `set` in class `C` is not dynamically callable. (Typing[4426])
  File "sdt_private_method.bad.php", line 13, characters 12-15:
  Cannot write to property `prop` through dynamic type because private property in `C` does not have an enforceable type
  File "sdt_private_method.bad.php", line 10, characters 11-15:
  Property `prop` has type `A::TC`
